--- a/index.html
+++ b/index.html
@@ -42,7 +42,7 @@
                             <a href="#portfolio">Portfolio</a>
                         </li>
                         <li class="page-scroll">
-                            <a href="#contact">Contact</a>
+                            <a href="#about">About</a>
                         </li>
                     </ul>
                 
